<resources>
    <string name="app_name">MyPOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sale">Sale</string>
    <string name="menu_purchase">Purchase</string>
    <string name="menu_stockstatus">Stock Status</string>
    <string name="menu_stock">Stock</string>
    <string name="menu_new_stock">New Stock</string>
    <string name="menu_supplier_customer">Supplier/Customer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>